src/components/styles/Sidebar.module.scss
@use '../../styles/variable.scss' as *;

.overlay {
  position: fixed;
  top: 0;
  width: 100vh;
  height: 100vh;
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(10px);
}

.sidebar {
  position: fixed;
  top: 0;
  right: 0;
  width: 60%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: $color-lighter;

  &.dark {
    background-color: $color-darker;
  }

  a {
    align-self: center;
    margin: 20px 0;
  }
}

.closeIcon {
  font-size: 27px;
  margin-right: auto;
  padding: 20px;
  transition: transform 0.2s ease-in-out;

  &:hover {
        color: $color-secondary;
        transform: translateY(-2px);
    }
}

